// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectableCardField should render correctly 1`] = `
<DocumentFragment>
  .cache-154x9x5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-154x9x5[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-154x9x5[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-154x9x5[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-154x9x5:hover:not([data-error='true'][data-disabled='true']),
.cache-154x9x5:focus-within:not([data-error='true'][data-disabled='true']),
.cache-154x9x5:active:not([data-error='true'][data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-154x9x5:hover:not([data-error='true'][data-disabled='true'])[data-cheked='false'],
.cache-154x9x5:focus-within:not([data-error='true'][data-disabled='true'])[data-cheked='false'],
.cache-154x9x5:active:not([data-error='true'][data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-1x5vomj {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1x5vomj[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1x5vomj:hover[aria-disabled='false'] .e1duuirp1[id=test-test]+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1x5vomj:hover[aria-disabled='false'] .e1duuirp1[id=test-test]+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-1x5vomj:hover[aria-disabled='false'] .e1duuirp1[id=test-test][aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1x5vomj:hover[aria-disabled='false'] .e1duuirp1[id=test-test][aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-1x5vomj[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1x5vomj[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1x5vomj[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-1x5vomj[data-checked='true'] {
  color: #4f0599;
}

.cache-1x5vomj[data-error='true'] {
  color: #a6102d;
}

.cache-1x5vomj[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-1x5vomj input+svg {
  display: none;
}

.cache-1x5vomj label {
  display: none;
}

.cache-1pbtiau {
  visibility: hidden;
  position: absolute;
  cursor: pointer;
}

.cache-1pbtiau+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1pbtiau[aria-checked='true']+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1pbtiau[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-1pbtiau[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-1pbtiau:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1pbtiau:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-1pbtiau[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1pbtiau[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-jsk10b {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-jsk10b .e1duuirp4 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <div
      class="cache-154x9x5 ejleepd1"
      data-checked="false"
      data-disabled="false"
      data-error="false"
    >
      <label
        aria-disabled="false"
        class="ejleepd0 cache-1x5vomj e1duuirp0"
        data-checked="false"
        data-error="false"
        for="test-test"
      >
        <input
          aria-checked="false"
          aria-disabled="false"
          aria-invalid="false"
          class="cache-1pbtiau e1duuirp1"
          id="test-test"
          name="test"
          tabindex="0"
          type="radio"
          value="test"
        />
        <svg
          class="cache-jsk10b e1duuirp2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-1e98oqk e1duuirp4"
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              class="cache-0 e1duuirp3"
              cx="12"
              cy="12"
              r="4"
            />
          </g>
        </svg>
      </label>
      Radio field
    </div>
  </form>
</DocumentFragment>
`;

exports[`SelectableCardField should render correctly checked 1`] = `
<DocumentFragment>
  .cache-154x9x5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-154x9x5[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-154x9x5[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-154x9x5[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-154x9x5:hover:not([data-error='true'][data-disabled='true']),
.cache-154x9x5:focus-within:not([data-error='true'][data-disabled='true']),
.cache-154x9x5:active:not([data-error='true'][data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-154x9x5:hover:not([data-error='true'][data-disabled='true'])[data-cheked='false'],
.cache-154x9x5:focus-within:not([data-error='true'][data-disabled='true'])[data-cheked='false'],
.cache-154x9x5:active:not([data-error='true'][data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-olmcrg {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-olmcrg[aria-disabled='false'] {
  cursor: pointer;
}

.cache-olmcrg:hover[aria-disabled='false'] .e1duuirp1[id=test-checked]+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-olmcrg:hover[aria-disabled='false'] .e1duuirp1[id=test-checked]+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-olmcrg:hover[aria-disabled='false'] .e1duuirp1[id=test-checked][aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-olmcrg:hover[aria-disabled='false'] .e1duuirp1[id=test-checked][aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-olmcrg[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-olmcrg[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-olmcrg[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-olmcrg[data-checked='true'] {
  color: #4f0599;
}

.cache-olmcrg[data-error='true'] {
  color: #a6102d;
}

.cache-olmcrg[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-olmcrg input+svg {
  display: none;
}

.cache-olmcrg label {
  display: none;
}

.cache-1pbtiau {
  visibility: hidden;
  position: absolute;
  cursor: pointer;
}

.cache-1pbtiau+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1pbtiau[aria-checked='true']+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1pbtiau[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-1pbtiau[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-1pbtiau:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1pbtiau:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-1pbtiau[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1pbtiau[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-jsk10b {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-jsk10b .e1duuirp4 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <div
      class="cache-154x9x5 ejleepd1"
      data-checked="true"
      data-disabled="false"
      data-error="false"
    >
      <label
        aria-disabled="false"
        class="ejleepd0 cache-olmcrg e1duuirp0"
        data-checked="true"
        data-error="false"
        for="test-checked"
      >
        <input
          aria-checked="true"
          aria-disabled="false"
          aria-invalid="false"
          checked=""
          class="cache-1pbtiau e1duuirp1"
          id="test-checked"
          name="test"
          tabindex="0"
          type="radio"
          value="checked"
        />
        <svg
          class="cache-jsk10b e1duuirp2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-1e98oqk e1duuirp4"
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              class="cache-0 e1duuirp3"
              cx="12"
              cy="12"
              r="4"
            />
          </g>
        </svg>
      </label>
      Radio field checked
    </div>
  </form>
</DocumentFragment>
`;

exports[`SelectableCardField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-154x9x5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-154x9x5[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-154x9x5[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-154x9x5[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-154x9x5:hover:not([data-error='true'][data-disabled='true']),
.cache-154x9x5:focus-within:not([data-error='true'][data-disabled='true']),
.cache-154x9x5:active:not([data-error='true'][data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-154x9x5:hover:not([data-error='true'][data-disabled='true'])[data-cheked='false'],
.cache-154x9x5:focus-within:not([data-error='true'][data-disabled='true'])[data-cheked='false'],
.cache-154x9x5:active:not([data-error='true'][data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-1agu2jd {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1agu2jd[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1agu2jd:hover[aria-disabled='false'] .e1duuirp1[id=test-disabled]+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1agu2jd:hover[aria-disabled='false'] .e1duuirp1[id=test-disabled]+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-1agu2jd:hover[aria-disabled='false'] .e1duuirp1[id=test-disabled][aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1agu2jd:hover[aria-disabled='false'] .e1duuirp1[id=test-disabled][aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-1agu2jd[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1agu2jd[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1agu2jd[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-1agu2jd[data-checked='true'] {
  color: #4f0599;
}

.cache-1agu2jd[data-error='true'] {
  color: #a6102d;
}

.cache-1agu2jd[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-1agu2jd input+svg {
  display: none;
}

.cache-1agu2jd label {
  display: none;
}

.cache-1pbtiau {
  visibility: hidden;
  position: absolute;
  cursor: pointer;
}

.cache-1pbtiau+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1pbtiau[aria-checked='true']+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1pbtiau[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-1pbtiau[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-1pbtiau:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1pbtiau:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-1pbtiau[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1pbtiau[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-jsk10b {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-jsk10b .e1duuirp4 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <div
      class="cache-154x9x5 ejleepd1"
      data-checked="false"
      data-disabled="true"
      data-error="false"
    >
      <label
        aria-disabled="true"
        class="ejleepd0 cache-1agu2jd e1duuirp0"
        data-checked="false"
        data-error="false"
        for="test-disabled"
      >
        <input
          aria-checked="false"
          aria-disabled="true"
          aria-invalid="false"
          class="cache-1pbtiau e1duuirp1"
          disabled=""
          id="test-disabled"
          name="test"
          style="pointer-events: none;"
          type="radio"
          value="disabled"
        />
        <svg
          class="cache-jsk10b e1duuirp2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-1e98oqk e1duuirp4"
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              class="cache-0 e1duuirp3"
              cx="12"
              cy="12"
              r="4"
            />
          </g>
        </svg>
      </label>
      Radio field disabled
    </div>
  </form>
</DocumentFragment>
`;

exports[`SelectableCardField should render correctly with errors 1`] = `
<DocumentFragment>
  .cache-154x9x5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-154x9x5[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-154x9x5[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-154x9x5[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-154x9x5:hover:not([data-error='true'][data-disabled='true']),
.cache-154x9x5:focus-within:not([data-error='true'][data-disabled='true']),
.cache-154x9x5:active:not([data-error='true'][data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-154x9x5:hover:not([data-error='true'][data-disabled='true'])[data-cheked='false'],
.cache-154x9x5:focus-within:not([data-error='true'][data-disabled='true'])[data-cheked='false'],
.cache-154x9x5:active:not([data-error='true'][data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-olmcrg {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-olmcrg[aria-disabled='false'] {
  cursor: pointer;
}

.cache-olmcrg:hover[aria-disabled='false'] .e1duuirp1[id=test-checked]+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-olmcrg:hover[aria-disabled='false'] .e1duuirp1[id=test-checked]+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-olmcrg:hover[aria-disabled='false'] .e1duuirp1[id=test-checked][aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-olmcrg:hover[aria-disabled='false'] .e1duuirp1[id=test-checked][aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-olmcrg[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-olmcrg[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-olmcrg[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-olmcrg[data-checked='true'] {
  color: #4f0599;
}

.cache-olmcrg[data-error='true'] {
  color: #a6102d;
}

.cache-olmcrg[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-olmcrg input+svg {
  display: none;
}

.cache-olmcrg label {
  display: none;
}

.cache-1pbtiau {
  visibility: hidden;
  position: absolute;
  cursor: pointer;
}

.cache-1pbtiau+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1pbtiau[aria-checked='true']+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1pbtiau[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-1pbtiau[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-1pbtiau:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1pbtiau:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-1pbtiau[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1pbtiau[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-jsk10b {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-jsk10b .e1duuirp4 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <div
      class="cache-154x9x5 ejleepd1"
      data-checked="false"
      data-disabled="false"
      data-error="true"
    >
      <label
        aria-disabled="false"
        class="ejleepd0 cache-olmcrg e1duuirp0"
        data-checked="false"
        data-error="true"
        for="test-checked"
      >
        <input
          aria-checked="false"
          aria-disabled="false"
          aria-invalid="true"
          class="cache-1pbtiau e1duuirp1"
          id="test-checked"
          name="test"
          tabindex="0"
          type="radio"
          value="checked"
        />
        <svg
          class="cache-jsk10b e1duuirp2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-1e98oqk e1duuirp4"
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              class="cache-0 e1duuirp3"
              cx="12"
              cy="12"
              r="4"
            />
          </g>
        </svg>
      </label>
      Radio field error
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`SelectableCardField should trigger events correctly 1`] = `
<DocumentFragment>
  .cache-154x9x5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-154x9x5[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-154x9x5[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-154x9x5[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-154x9x5:hover:not([data-error='true'][data-disabled='true']),
.cache-154x9x5:focus-within:not([data-error='true'][data-disabled='true']),
.cache-154x9x5:active:not([data-error='true'][data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-154x9x5:hover:not([data-error='true'][data-disabled='true'])[data-cheked='false'],
.cache-154x9x5:focus-within:not([data-error='true'][data-disabled='true'])[data-cheked='false'],
.cache-154x9x5:active:not([data-error='true'][data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-1kg4xl3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1kg4xl3[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1kg4xl3:hover[aria-disabled='false'] .e1duuirp1[id=test-events]+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1kg4xl3:hover[aria-disabled='false'] .e1duuirp1[id=test-events]+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-1kg4xl3:hover[aria-disabled='false'] .e1duuirp1[id=test-events][aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1kg4xl3:hover[aria-disabled='false'] .e1duuirp1[id=test-events][aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-1kg4xl3[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1kg4xl3[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1kg4xl3[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-1kg4xl3[data-checked='true'] {
  color: #4f0599;
}

.cache-1kg4xl3[data-error='true'] {
  color: #a6102d;
}

.cache-1kg4xl3[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-1kg4xl3 input+svg {
  display: none;
}

.cache-1kg4xl3 label {
  display: none;
}

.cache-1pbtiau {
  visibility: hidden;
  position: absolute;
  cursor: pointer;
}

.cache-1pbtiau+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1pbtiau[aria-checked='true']+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1pbtiau[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-1pbtiau[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-1pbtiau:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1pbtiau:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-1pbtiau[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1pbtiau[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-jsk10b {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-jsk10b .e1duuirp4 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <div
      class="cache-154x9x5 ejleepd1"
      data-checked="true"
      data-disabled="false"
      data-error="false"
    >
      <label
        aria-disabled="false"
        class="ejleepd0 cache-1kg4xl3 e1duuirp0"
        data-checked="true"
        data-error="false"
        for="test-events"
      >
        <input
          aria-checked="true"
          aria-disabled="false"
          aria-invalid="false"
          class="cache-1pbtiau e1duuirp1"
          id="test-events"
          name="test"
          tabindex="0"
          type="radio"
          value="events"
        />
        <svg
          class="cache-jsk10b e1duuirp2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-1e98oqk e1duuirp4"
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              class="cache-0 e1duuirp3"
              cx="12"
              cy="12"
              r="4"
            />
          </g>
        </svg>
      </label>
      Radio field events
    </div>
  </form>
</DocumentFragment>
`;
